[package]
name = "anybus"
version = "0.1.0"
edition = "2024"
resolver ="3"
repository = "https://github.com/bexars/anybus"
license = "MIT"
authors = ["Matt Bradbury <matt@bexars.com"]
categories = ["network-programming", "asynchronous"]
keywords    = ["messaging", "ipc", "networking", "async", "dioxus"]
description = "A serverless message bus for communicating between Rust applications easily (only IPC currently)"
# rust-version = "1.86"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "counter"
required-features = [ "tokio", "ipc"]

[[example]]
name = "bridge"
required-features = [ "tokio", "ipc","ws"]

[[example]]
name = "chat_tui"
required-features = [ "tokio", "ipc","ws"]



[workspace]
members = ["anybus-macro"]

[workspace.dependencies]
uuid = { version = "1.18.0", default-features = false, features = [
    "v7",
    "serde",
    "std",
] }

[features]
tokio = ["tokio/rt-multi-thread", "tokio/time", "tokio/signal"]
default = ["tokio","ipc","ws","uuid","ws_server"]
# default = ["tokio","serde","uuid","wasm_ws"]

dioxus = ["dep:dioxus"]
ipc = ["remote" , "dep:interprocess", "dep:async-bincode", "dep:interprocess"]
net = [ "tokio/net"  ]
ws = ["remote", "dep:tokio-tungstenite-wasm", "dep:url", "dep:bytes", "dep:tokio-native-tls"]
ws_server = ["ws", "dep:tokio-tungstenite"]
remote =["tokio/rt", "serde"]
wasm = ["uuid/js","serde"]
# wasm_ws = ["wasm","remote", "dep:tokio-tungstenite-wasm", "dep:url", "dep:bytes"]

[dependencies]
uuid = {workspace= true, optional = true}
tokio = { version = "1", features = [
    # "rt",
    # "rt-multi-thread",
    "sync",
    "macros",
] }
interprocess = { version = "2.2.3", features = ["tokio"], optional = true }

serde = { version = "1.0", features = ["derive"], optional = true }
# tokio = { version = "1", features = [
#     "rt",
#     # "rt-multi-thread",
#     "sync",
#     "macros",
#     # "signal",
#     "time",
# ], optional = true }
erased-serde = "0.4"
serde_cbor = "0.11"
# rand = "*"
itertools = "0.14"
thiserror = "2"
sorted-vec = "0.8.2"
# socket2 = "0.5.3"
# lazy_static = "1.4.0"
# binrw = "0.11.2"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
# if-addrs = { version = "0.10.1", features = ["link-local"] }
anybus-macro = { path = "./anybus-macro", version = "0.1.0" }
dioxus = { version = "0.7.0-rc.0", optional = true }
# futures-channel = "0.3.31"
async-watch = "0.3.1"
tracing = "0.1.41"

async-bincode = { version = "0.8.0", optional = true }
async-trait = "0.1.89"
bincode = { version = "2.0.1", no-default-features = true }
#bincode2 = "2.0.1"
dyn-clone = "1.0.20"
url = {version = "2.5.7", optional = true}
bytes = {version = "1.10.1", optional = true}
tokio-rustls = {version = "0.26.4", optional = true}
# native-tls = {version = "0.2.14", optional = true}
tokio-native-tls = {version = "0.3.0", optional = true}
# tungstenite = {version = "0.20.0", optional = true}
tokio-tungstenite-wasm = { path = "../tokio-tungstenite-wasm",optional=true, features = ["native-tls"] }
tokio-tungstenite = { version = "0.28.0", optional = true, features = ["stream","native-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[target.'cfg(target_arch = "wasm32")'.features]
ws = ["remote","net", "dep:tokio-tungstenite-wasm", "dep:url", "dep:bytes"]

[target.'cfg(not(target_arch = "wasm32"))'.features]
ws = ["remote","net", "dep:tokio-tungstenite", "dep:url", "dep:bytes", "dep:tokio-native-tls"]


[dev-dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.28.0", features = ["event-stream", "serde"] }
futures = "0.3.28"
ratatui = "0.29.0"
serde = "1.0"
serde_derive = "1.0.219"
signal-hook = "0.3.18"
tokio = "1"
tokio-util = "0.7.16"
tui-scrollview = "0.5.1"
tui-textarea = "0.7.0"
tracing-subscriber = "0.3"
tracing-appender = "0.2.3"
trybuild = "1.0.111"
anybus = { path = "./" , features = ["tokio","ipc"] }
# tokio = { version = "1.15", features = ["full", "tracing"] }
# console-subscriber = "0.4.1"
