[package]
name = "anybus-macro"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Matt Bradbury <matt@bexars.com>"]
description = "Procedural macros for Anybus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
uuid = { version = "1.18.0", default-features = false,features = [
    "v7",
    "serde",
    "std",
] }
darling = "0.21.0"


[lib]
proc-macro = true
